--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ buildNumber.properties
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+URLSMonitor.iml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
